# demo-datafixture

./: README.md  create_db.py  data_gen.py  pipeline.py  pyproject.toml  pytest.ini
demo/: pipeline.py
test/: conftest.py  test_pipeline.py
